--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -112,48 +112,36 @@ html, body {
     width: 50px !important;
   }
   /* line 101, ../sass/main.scss */
+  .container .upper-nav .nav-container .nav-bar .toggle {
+    align-self: flex-end;
+    display: block !important;
+  }
+  /* line 105, ../sass/main.scss */
   .container .upper-nav .nav-container .nav-bar .work-contains {
     margin: 0;
     flex-direction: column;
     align-items: center;
   }
-  /* line 105, ../sass/main.scss */
+  /* line 109, ../sass/main.scss */
   .container .upper-nav .nav-container .nav-bar .work-contains img {
     width: 50px !important;
   }
 }
-/* line 110, ../sass/main.scss */
-.container .upper-nav .nav-container .nav-bar .mobile-nav {
-  width: 100%;
-  display: flex;
-}
-/* line 113, ../sass/main.scss */
-.container .upper-nav .nav-container .nav-bar .mobile-nav .toggle {
-  align-self: flex-end;
-}
-/* line 115, ../sass/main.scss */
-.container .upper-nav .nav-container .nav-bar .mobile-nav .toggle img {
-  width: 30px;
-}
-/* line 120, ../sass/main.scss */
-.container .upper-nav .nav-container .nav-bar .mobile-nav .active img {
-  width: 70px;
-}
-/* line 129, ../sass/main.scss */
+/* line 117, ../sass/main.scss */
 .container .main-content {
   display: flex;
   position: relative;
   justify-content: center;
   line-height: 2.1em;
 }
-/* line 134, ../sass/main.scss */
+/* line 122, ../sass/main.scss */
 .container .main-content .about {
   height: 100%;
   width: 80%;
   padding-top: 30px;
   padding-bottom: 30px;
 }
-/* line 140, ../sass/main.scss */
+/* line 128, ../sass/main.scss */
 .container .main-content .work {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -165,21 +153,21 @@ html, body {
   align-items: center;
   text-align: center;
 }
-/* line 151, ../sass/main.scss */
+/* line 139, ../sass/main.scss */
 .container .main-content .work .code .work-text {
   text-align: start;
 }
-/* line 154, ../sass/main.scss */
+/* line 142, ../sass/main.scss */
 .container .main-content .work .code .projects {
   display: block;
   align-self: flex-start;
 }
-/* line 157, ../sass/main.scss */
+/* line 145, ../sass/main.scss */
 .container .main-content .work .code .projects .project-container {
   display: table;
   content: " ";
 }
-/* line 160, ../sass/main.scss */
+/* line 148, ../sass/main.scss */
 .container .main-content .work .code .projects .project-container .projectCell {
   cursor: pointer;
   font-weight: bold;
@@ -187,11 +175,11 @@ html, body {
   padding: 10px;
   transition: .2s ease-in-out;
 }
-/* line 166, ../sass/main.scss */
+/* line 154, ../sass/main.scss */
 .container .main-content .work .code .projects .project-container .projectCell .projectContent:hover {
   transform: scale(1.1);
 }
-/* line 170, ../sass/main.scss */
+/* line 158, ../sass/main.scss */
 .container .main-content .work .code .projects .project-container .description {
   width: 80%;
   text-align: center;
@@ -203,27 +191,27 @@ html, body {
   font-size: 14px;
   line-height: 1.8;
 }
-/* line 183, ../sass/main.scss */
+/* line 171, ../sass/main.scss */
 .container .main-content .work .code .project-info {
   display: flex;
   flex-flow: column;
   align-items: center;
 }
-/* line 187, ../sass/main.scss */
+/* line 175, ../sass/main.scss */
 .container .main-content .work .code .project-info .cancel {
   cursor: pointer;
   align-self: flex-end;
 }
-/* line 190, ../sass/main.scss */
+/* line 178, ../sass/main.scss */
 .container .main-content .work .code .project-info .cancel img {
   width: 30px;
 }
-/* line 196, ../sass/main.scss */
+/* line 184, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .project-media img {
   width: 70%;
   height: 90%;
 }
-/* line 201, ../sass/main.scss */
+/* line 189, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .videoWrapper {
   position: relative;
   padding-bottom: 56.25%;
@@ -231,7 +219,7 @@ html, body {
   padding-top: 25px;
   height: 0;
 }
-/* line 206, ../sass/main.scss */
+/* line 194, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .videoWrapper iframe {
   position: absolute;
   top: 0;
@@ -239,47 +227,47 @@ html, body {
   width: 100%;
   height: 100%;
 }
-/* line 214, ../sass/main.scss */
+/* line 202, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .project-title {
   text-align: center;
   font-weight: bold;
   font-size: 20px;
 }
-/* line 219, ../sass/main.scss */
+/* line 207, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .project-details {
   align-self: flex-start;
   text-align: start;
 }
-/* line 226, ../sass/main.scss */
+/* line 214, ../sass/main.scss */
 .container .main-content .work .design {
   width: 100%;
 }
-/* line 228, ../sass/main.scss */
+/* line 216, ../sass/main.scss */
 .container .main-content .work .design .design-text {
   text-align: start;
 }
-/* line 231, ../sass/main.scss */
+/* line 219, ../sass/main.scss */
 .container .main-content .work .design .projects {
   display: block;
   align-self: flex-start;
 }
-/* line 234, ../sass/main.scss */
+/* line 222, ../sass/main.scss */
 .container .main-content .work .design .projects .project-container {
   display: table;
   content: " ";
 }
-/* line 237, ../sass/main.scss */
+/* line 225, ../sass/main.scss */
 .container .main-content .work .design .projects .project-container .projectCell {
   font-weight: bold;
   font-size: large;
   padding: 10px;
 }
-/* line 242, ../sass/main.scss */
+/* line 230, ../sass/main.scss */
 .container .main-content .work .design .projects .project-container .projectCell .projectContent img {
   max-width: 400px;
   max-height: 500px;
 }
-/* line 248, ../sass/main.scss */
+/* line 236, ../sass/main.scss */
 .container .main-content .work .design .projects .project-container .description {
   text-align: start;
   margin: auto;
@@ -290,7 +278,7 @@ html, body {
   font-size: 14px;
   line-height: 1.8;
 }
-/* line 262, ../sass/main.scss */
+/* line 250, ../sass/main.scss */
 .container .main-content .notes {
   height: 100%;
   width: 80%;
@@ -301,27 +289,27 @@ html, body {
   align-items: center;
   text-align: center;
 }
-/* line 270, ../sass/main.scss */
+/* line 258, ../sass/main.scss */
 .container .main-content .notes .notes-text {
   text-align: start;
 }
-/* line 274, ../sass/main.scss */
+/* line 262, ../sass/main.scss */
 .container .main-content .notes .projectCell {
   font-weight: bold;
   font-size: large;
 }
-/* line 279, ../sass/main.scss */
+/* line 267, ../sass/main.scss */
 .container .main-content .notes .projectContent img {
   width: 200px;
   height: 200px;
 }
-/* line 284, ../sass/main.scss */
+/* line 272, ../sass/main.scss */
 .container .main-content .notes .description {
   font-weight: lighter;
   font-size: 14px;
   line-height: 1.7em;
 }
-/* line 290, ../sass/main.scss */
+/* line 278, ../sass/main.scss */
 .container .main-content .contact {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -329,18 +317,18 @@ html, body {
   display: flex;
   flex-flow: row;
 }
-/* line 296, ../sass/main.scss */
+/* line 284, ../sass/main.scss */
 .container .main-content .contact .contact-box {
   width: 70%;
   display: flex;
   flex-flow: column;
   align-items: flex-start;
 }
-/* line 301, ../sass/main.scss */
+/* line 289, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form {
   width: 100%;
 }
-/* line 303, ../sass/main.scss */
+/* line 291, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form input {
   margin-bottom: 50px;
   width: 40%;
@@ -349,7 +337,7 @@ html, body {
   display: block;
   padding-bottom: 10px;
 }
-/* line 311, ../sass/main.scss */
+/* line 299, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form textarea {
   margin-bottom: 20px;
   border: none;
@@ -357,39 +345,39 @@ html, body {
   width: 90%;
   height: 100px;
 }
-/* line 318, ../sass/main.scss */
+/* line 306, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form #btn {
   width: 150px;
   align-self: center;
 }
-/* line 322, ../sass/main.scss */
+/* line 310, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form input:focus,
 .container .main-content .contact .contact-box #contact-form textarea:focus {
   outline: none;
 }
-/* line 328, ../sass/main.scss */
+/* line 316, ../sass/main.scss */
 .container .main-content .contact .contact-info {
   width: 30%;
 }
 @media all and (max-width: 500px) {
-  /* line 333, ../sass/main.scss */
+  /* line 321, ../sass/main.scss */
   .container .main-content .contact {
     flex-direction: column;
   }
-  /* line 336, ../sass/main.scss */
+  /* line 324, ../sass/main.scss */
   .container .main-content .contact #contact-form input {
     width: 60vw !important;
   }
-  /* line 339, ../sass/main.scss */
+  /* line 327, ../sass/main.scss */
   .container .main-content .contact #contact-form textarea {
     width: 70vw !important;
   }
-  /* line 343, ../sass/main.scss */
+  /* line 331, ../sass/main.scss */
   .container .main-content .contact .contact-info {
     width: 100%;
   }
 }
-/* line 348, ../sass/main.scss */
+/* line 336, ../sass/main.scss */
 .container .main-content .foryou {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -397,12 +385,12 @@ html, body {
   display: flex;
   flex-flow: column;
 }
-/* line 354, ../sass/main.scss */
+/* line 342, ../sass/main.scss */
 .container .main-content .foryou .foryou-text {
   align-self: flex-start;
   padding-bottom: 20px;
 }
-/* line 358, ../sass/main.scss */
+/* line 346, ../sass/main.scss */
 .container .main-content .foryou .vidWrapper {
   position: relative;
   padding-bottom: 56.25%;
@@ -410,7 +398,7 @@ html, body {
   padding-top: 25px;
   height: 0;
 }
-/* line 363, ../sass/main.scss */
+/* line 351, ../sass/main.scss */
 .container .main-content .foryou .vidWrapper iframe {
   position: absolute;
   top: 0;
@@ -418,7 +406,7 @@ html, body {
   width: 100%;
   height: 100%;
 }
-/* line 373, ../sass/main.scss */
+/* line 361, ../sass/main.scss */
 .container .footer-wrapper {
   margin-top: auto;
   position: relative;
@@ -426,7 +414,7 @@ html, body {
   height: 80px;
   bottom: 0;
 }
-/* line 379, ../sass/main.scss */
+/* line 367, ../sass/main.scss */
 .container .footer-wrapper .footer {
   position: absolute;
   height: 80px;
@@ -436,7 +424,7 @@ html, body {
   background: white;
   justify-content: center;
 }
-/* line 387, ../sass/main.scss */
+/* line 375, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container {
   display: flex;
   height: 80px;
@@ -444,13 +432,13 @@ html, body {
   flex-flow: row;
   border-top: 1px solid #e6e9eb;
 }
-/* line 393, ../sass/main.scss */
+/* line 381, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container .icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-/* line 397, ../sass/main.scss */
+/* line 385, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container .icons img {
   display: block;
   margin: auto;
