--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -104,7 +104,7 @@ html, body {
 						}
 					.work-contains{
 						margin: 0;
-						flex-direction: column;
+						//flex-direction: column;
 						align-items: center;
 						img{
 							width: 50px !important;
