Added more spacing in work-contains

--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -103,8 +103,8 @@ html, body {
 							display: block !important;
 						}
 					.work-contains{
-						margin: 0;
-						//flex-direction: column;
+						margin-right: 9vw;
+						justify-content: space-between;
 						align-items: center;
 						img{
 							width: 50px !important;
