--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -103,45 +103,49 @@ html, body {
   width: 45%;
 }
 @media all and (max-width: 500px) {
-  /* line 95, ../sass/main.scss */
+  /* line 96, ../sass/main.scss */
+  .container .upper-nav .nav-container .nav-bar {
+    flex-direction: row;
+  }
+  /* line 98, ../sass/main.scss */
   .container .upper-nav .nav-container .nav-bar .contains {
     flex-direction: column;
   }
-  /* line 97, ../sass/main.scss */
+  /* line 100, ../sass/main.scss */
   .container .upper-nav .nav-container .nav-bar .contains img {
     width: 50px !important;
   }
-  /* line 101, ../sass/main.scss */
+  /* line 104, ../sass/main.scss */
   .container .upper-nav .nav-container .nav-bar .toggle {
-    align-self: flex-end;
     display: block !important;
   }
-  /* line 105, ../sass/main.scss */
+  /* line 107, ../sass/main.scss */
   .container .upper-nav .nav-container .nav-bar .work-contains {
+    flex-flow: column;
     margin-right: 9vw;
     justify-content: space-between;
     align-items: center;
   }
-  /* line 109, ../sass/main.scss */
+  /* line 112, ../sass/main.scss */
   .container .upper-nav .nav-container .nav-bar .work-contains img {
     width: 50px !important;
   }
 }
-/* line 117, ../sass/main.scss */
+/* line 120, ../sass/main.scss */
 .container .main-content {
   display: flex;
   position: relative;
   justify-content: center;
   line-height: 2.1em;
 }
-/* line 122, ../sass/main.scss */
+/* line 125, ../sass/main.scss */
 .container .main-content .about {
   height: 100%;
   width: 80%;
   padding-top: 30px;
   padding-bottom: 30px;
 }
-/* line 128, ../sass/main.scss */
+/* line 131, ../sass/main.scss */
 .container .main-content .work {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -153,21 +157,21 @@ html, body {
   align-items: center;
   text-align: center;
 }
-/* line 139, ../sass/main.scss */
+/* line 142, ../sass/main.scss */
 .container .main-content .work .code .work-text {
   text-align: start;
 }
-/* line 142, ../sass/main.scss */
+/* line 145, ../sass/main.scss */
 .container .main-content .work .code .projects {
   display: block;
   align-self: flex-start;
 }
-/* line 145, ../sass/main.scss */
+/* line 148, ../sass/main.scss */
 .container .main-content .work .code .projects .project-container {
   display: table;
   content: " ";
 }
-/* line 148, ../sass/main.scss */
+/* line 151, ../sass/main.scss */
 .container .main-content .work .code .projects .project-container .projectCell {
   cursor: pointer;
   font-weight: bold;
@@ -175,11 +179,11 @@ html, body {
   padding: 10px;
   transition: .2s ease-in-out;
 }
-/* line 154, ../sass/main.scss */
+/* line 157, ../sass/main.scss */
 .container .main-content .work .code .projects .project-container .projectCell .projectContent:hover {
   transform: scale(1.1);
 }
-/* line 158, ../sass/main.scss */
+/* line 161, ../sass/main.scss */
 .container .main-content .work .code .projects .project-container .description {
   width: 80%;
   text-align: center;
@@ -191,27 +195,27 @@ html, body {
   font-size: 14px;
   line-height: 1.8;
 }
-/* line 171, ../sass/main.scss */
+/* line 174, ../sass/main.scss */
 .container .main-content .work .code .project-info {
   display: flex;
   flex-flow: column;
   align-items: center;
 }
-/* line 175, ../sass/main.scss */
+/* line 178, ../sass/main.scss */
 .container .main-content .work .code .project-info .cancel {
   cursor: pointer;
   align-self: flex-end;
 }
-/* line 178, ../sass/main.scss */
+/* line 181, ../sass/main.scss */
 .container .main-content .work .code .project-info .cancel img {
   width: 30px;
 }
-/* line 184, ../sass/main.scss */
+/* line 187, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .project-media img {
   width: 70%;
   height: 90%;
 }
-/* line 189, ../sass/main.scss */
+/* line 192, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .videoWrapper {
   position: relative;
   padding-bottom: 56.25%;
@@ -219,7 +223,7 @@ html, body {
   padding-top: 25px;
   height: 0;
 }
-/* line 194, ../sass/main.scss */
+/* line 197, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .videoWrapper iframe {
   position: absolute;
   top: 0;
@@ -227,47 +231,47 @@ html, body {
   width: 100%;
   height: 100%;
 }
-/* line 202, ../sass/main.scss */
+/* line 205, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .project-title {
   text-align: center;
   font-weight: bold;
   font-size: 20px;
 }
-/* line 207, ../sass/main.scss */
+/* line 210, ../sass/main.scss */
 .container .main-content .work .code .project-info .project-info-container .project-details {
   align-self: flex-start;
   text-align: start;
 }
-/* line 214, ../sass/main.scss */
+/* line 217, ../sass/main.scss */
 .container .main-content .work .design {
   width: 100%;
 }
-/* line 216, ../sass/main.scss */
+/* line 219, ../sass/main.scss */
 .container .main-content .work .design .design-text {
   text-align: start;
 }
-/* line 219, ../sass/main.scss */
+/* line 222, ../sass/main.scss */
 .container .main-content .work .design .projects {
   display: block;
   align-self: flex-start;
 }
-/* line 222, ../sass/main.scss */
+/* line 225, ../sass/main.scss */
 .container .main-content .work .design .projects .project-container {
   display: table;
   content: " ";
 }
-/* line 225, ../sass/main.scss */
+/* line 228, ../sass/main.scss */
 .container .main-content .work .design .projects .project-container .projectCell {
   font-weight: bold;
   font-size: large;
   padding: 10px;
 }
-/* line 230, ../sass/main.scss */
+/* line 233, ../sass/main.scss */
 .container .main-content .work .design .projects .project-container .projectCell .projectContent img {
   max-width: 400px;
   max-height: 500px;
 }
-/* line 236, ../sass/main.scss */
+/* line 239, ../sass/main.scss */
 .container .main-content .work .design .projects .project-container .description {
   text-align: start;
   margin: auto;
@@ -278,7 +282,7 @@ html, body {
   font-size: 14px;
   line-height: 1.8;
 }
-/* line 250, ../sass/main.scss */
+/* line 253, ../sass/main.scss */
 .container .main-content .notes {
   height: 100%;
   width: 80%;
@@ -289,27 +293,27 @@ html, body {
   align-items: center;
   text-align: center;
 }
-/* line 258, ../sass/main.scss */
+/* line 261, ../sass/main.scss */
 .container .main-content .notes .notes-text {
   text-align: start;
 }
-/* line 262, ../sass/main.scss */
+/* line 265, ../sass/main.scss */
 .container .main-content .notes .projectCell {
   font-weight: bold;
   font-size: large;
 }
-/* line 267, ../sass/main.scss */
+/* line 270, ../sass/main.scss */
 .container .main-content .notes .projectContent img {
   width: 200px;
   height: 200px;
 }
-/* line 272, ../sass/main.scss */
+/* line 275, ../sass/main.scss */
 .container .main-content .notes .description {
   font-weight: lighter;
   font-size: 14px;
   line-height: 1.7em;
 }
-/* line 278, ../sass/main.scss */
+/* line 281, ../sass/main.scss */
 .container .main-content .contact {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -317,18 +321,18 @@ html, body {
   display: flex;
   flex-flow: row;
 }
-/* line 284, ../sass/main.scss */
+/* line 287, ../sass/main.scss */
 .container .main-content .contact .contact-box {
   width: 70%;
   display: flex;
   flex-flow: column;
   align-items: flex-start;
 }
-/* line 289, ../sass/main.scss */
+/* line 292, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form {
   width: 100%;
 }
-/* line 291, ../sass/main.scss */
+/* line 294, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form input {
   margin-bottom: 50px;
   width: 40%;
@@ -337,7 +341,7 @@ html, body {
   display: block;
   padding-bottom: 10px;
 }
-/* line 299, ../sass/main.scss */
+/* line 302, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form textarea {
   margin-bottom: 20px;
   border: none;
@@ -345,39 +349,39 @@ html, body {
   width: 90%;
   height: 100px;
 }
-/* line 306, ../sass/main.scss */
+/* line 309, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form #btn {
   width: 150px;
   align-self: center;
 }
-/* line 310, ../sass/main.scss */
+/* line 313, ../sass/main.scss */
 .container .main-content .contact .contact-box #contact-form input:focus,
 .container .main-content .contact .contact-box #contact-form textarea:focus {
   outline: none;
 }
-/* line 316, ../sass/main.scss */
+/* line 319, ../sass/main.scss */
 .container .main-content .contact .contact-info {
   width: 30%;
 }
 @media all and (max-width: 500px) {
-  /* line 321, ../sass/main.scss */
+  /* line 324, ../sass/main.scss */
   .container .main-content .contact {
     flex-direction: column;
   }
-  /* line 324, ../sass/main.scss */
+  /* line 327, ../sass/main.scss */
   .container .main-content .contact #contact-form input {
     width: 60vw !important;
   }
-  /* line 327, ../sass/main.scss */
+  /* line 330, ../sass/main.scss */
   .container .main-content .contact #contact-form textarea {
     width: 70vw !important;
   }
-  /* line 331, ../sass/main.scss */
+  /* line 334, ../sass/main.scss */
   .container .main-content .contact .contact-info {
     width: 100%;
   }
 }
-/* line 336, ../sass/main.scss */
+/* line 339, ../sass/main.scss */
 .container .main-content .foryou {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -385,12 +389,12 @@ html, body {
   display: flex;
   flex-flow: column;
 }
-/* line 342, ../sass/main.scss */
+/* line 345, ../sass/main.scss */
 .container .main-content .foryou .foryou-text {
   align-self: flex-start;
   padding-bottom: 20px;
 }
-/* line 346, ../sass/main.scss */
+/* line 349, ../sass/main.scss */
 .container .main-content .foryou .vidWrapper {
   position: relative;
   padding-bottom: 56.25%;
@@ -398,7 +402,7 @@ html, body {
   padding-top: 25px;
   height: 0;
 }
-/* line 351, ../sass/main.scss */
+/* line 354, ../sass/main.scss */
 .container .main-content .foryou .vidWrapper iframe {
   position: absolute;
   top: 0;
@@ -406,7 +410,7 @@ html, body {
   width: 100%;
   height: 100%;
 }
-/* line 361, ../sass/main.scss */
+/* line 364, ../sass/main.scss */
 .container .footer-wrapper {
   margin-top: auto;
   position: relative;
@@ -414,7 +418,7 @@ html, body {
   height: 80px;
   bottom: 0;
 }
-/* line 367, ../sass/main.scss */
+/* line 370, ../sass/main.scss */
 .container .footer-wrapper .footer {
   position: absolute;
   height: 80px;
@@ -424,7 +428,7 @@ html, body {
   background: white;
   justify-content: center;
 }
-/* line 375, ../sass/main.scss */
+/* line 378, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container {
   display: flex;
   height: 80px;
@@ -432,15 +436,19 @@ html, body {
   flex-flow: row;
   border-top: 1px solid #e6e9eb;
 }
-/* line 381, ../sass/main.scss */
+/* line 384, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container .icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-/* line 385, ../sass/main.scss */
+/* line 388, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container .icons img {
   display: block;
   margin: auto;
   width: 40%;
+}
+/* line 395, ../sass/main.scss */
+.container .footer-wrapper .footer .made-with {
+  text-align: center;
 }
